--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "node": ">=10"
   },
   "dependencies": {
-    "@bitauth/libauth": "^1.17.1"
+    "@bitauth/libauth": "^1.17.1",
+    "knex": "^2.3.0"
   },
   "devDependencies": {
     "@ava/typescript": "^1.1.1",
