--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "@bitauth/libauth": "^1.17.1",
+    "date-fns": "^2.29.3",
     "knex": "^2.3.0"
   },
   "devDependencies": {
