--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "plum-assignment",
   "version": "1.0.0",
-  "description": "REST API for plum assignment",
+  "description": "Plum Assignment - Data Cleaning",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
   "module": "build/module/index.js",
@@ -36,19 +36,28 @@
     "doc:publish": "gh-pages -m \"[ci skip] Updates\" -d build/docs",
     "version": "standard-version",
     "reset-hard": "git clean -dfx && git reset --hard && npm i",
-    "prepare-release": "run-s reset-hard test cov:check doc:html version doc:publish"
+    "prepare-release": "run-s reset-hard test cov:check doc:html version doc:publish",
+    "dev": "ts-node --transpile-only ./src/index.ts",
+    "knex:migrate": "npx knex  --env production --knexfile=./src/core/config/knexfile.ts migrate:latest"
   },
   "engines": {
     "node": ">=10"
   },
   "dependencies": {
     "@bitauth/libauth": "^1.17.1",
+    "cors": "^2.8.5",
+    "csvtojson": "^2.0.10",
     "date-fns": "^2.29.3",
-    "knex": "^2.3.0"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "knex": "^2.3.0",
+    "pg": "^8.8.0",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@ava/typescript": "^1.1.1",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
+    "@types/express": "^4.17.14",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
     "ava": "^3.12.1",
@@ -66,9 +75,7 @@
     "open-cli": "^6.0.1",
     "prettier": "^2.1.1",
     "standard-version": "^9.0.0",
-    "ts-node": "^9.0.0",
-    "typedoc": "^0.19.0",
-    "typescript": "^4.0.2"
+    "typescript": "^4.8.4"
   },
   "files": [
     "build/main",
